Revision history for LWP-Protocol-Coro-http

1.0.4   2012-mm-dd
        - Preserve AnyEvent::HTTP pseudo heads by prefixing with X-AE-
        - Fix duplicate headers in response

1.0.3   2011-06-17
        - Skip tests that will fail due to DNS hijacking.

1.0.2   2011-06-13
        - Tests added.
        - Fixed bugs in :content_cb features.

1.0.1   2011-03-29
        - Lots of bug fixes didn't make it into 1.0.0.
        - Improved Synopsis.

1.0.0   2011-03-28
        Initial public version

-----   2010-10-10
        Initial version