@@ -69,6 +69,9 @@ SERVERLOOP: {
             $res->header('location', $d->url . $1);
         } elsif ($location =~ m!^/error/notfound/(.*)$!) {
             $res = HTTP::Response->new(404);
+        } elsif ($r->uri =~ m!^http://no\.such\.domain(?:/.*)?$!) {
+           $res = HTTP::Response->new(404);
+           $res->content($r->uri);
         } elsif ( $location =~ m!^/chunks!) {
             my $count = 5;
             $res = HTTP::Response->new(200, "OK", undef, sub {
@@ -77,6 +80,13 @@ SERVERLOOP: {
                return $buf if $count-- > 0;
                return undef; # done
             });
+        } elsif ($location =~ m!^/referer$!) {
+           if (my $referer = $r->headers->{referer}) {
+              $res = HTTP::Response->new(302);
+              $res->header('location', $referer);
+           } else {
+              $res = HTTP::Response->new(204);
+           }
         } elsif ($location =~ m!^/error/after_headers$!) {
             my $count = 2;
             $res = HTTP::Response->new(200, "OK", undef, sub {
