@@ -3,6 +3,7 @@ Revision history for LWP-Protocol-Coro-http
 1.0.4   2012-mm-dd
         - Preserve AnyEvent::HTTP pseudo heads by prefixing with X-AE-
         - Fix duplicate headers in response
+        - Add proxy support
 
 1.0.3   2011-06-17
         - Skip tests that will fail due to DNS hijacking.
